// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Should have correct heading 1`] = `
<h1
  class="ids-heading-1"
>
  Intyg
</h1>
`;

exports[`Should have correct paragraph 1`] = `
<div
  class="ids-preamble mb-2 text-lg md:text-[1.375rem]/[2.25rem]"
>
  Här hittar du dina digitala intyg som vården skrivit. I Intyg kan du läsa, skicka och skriva ut dina intyg. Saknar du ett intyg, eller vill begära ett intyg? Vänd dig till din mottagning. Klicka på länken “Läs mer” nedan om du vill veta vad du kan göra i Intyg.
</div>
`;

exports[`Should render alert message when list is empty 1`] = `
<ids-alert
  role="alert"
>
  <div
    class="flex flex-col gap-4"
  >
    <p>
      Intygen kunde inte visas på grund av ett tekniskt fel. Försök igen senare. Om felet kvarstår kontakta 
      <ids-link
        color="var(--link-colorpreset-1_color)"
        hovercolor="var(--link-colorpreset-1-hover_color)"
        underlined=""
      >
        <a
          href="https://www.1177.se/e-tjanster-support"
          rel="noreferrer"
          target="_blank"
        >
          support
        </a>
        <ids-icon-external
          class="ids-icon"
          color="var(--link-colorpreset-1_color)"
          color2="var(--link-colorpreset-1_color)"
          height="1rem"
          size="m"
          slot="append-icon"
          width="1rem"
        />
      </ids-link>
      och ange nedan fel-id:
    </p>
    <p>
      Om du inte kan nå ditt intyg, kontakta din mottagning för att få en kopia av intyget.
    </p>
  </div>
</ids-alert>
`;

exports[`Should render error message when unable to load list 1`] = `
[
  <ids-alert
    role="alert"
  >
    <div
      class="flex flex-col gap-4"
    >
      <p>
        Intygen kunde inte visas på grund av ett tekniskt fel. Försök igen senare. Om felet kvarstår kontakta 
        <ids-link
          color="var(--link-colorpreset-1_color)"
          hovercolor="var(--link-colorpreset-1-hover_color)"
          underlined=""
        >
          <a
            href="https://www.1177.se/e-tjanster-support"
            rel="noreferrer"
            target="_blank"
          >
            support
          </a>
          <ids-icon-external
            class="ids-icon"
            color="var(--link-colorpreset-1_color)"
            color2="var(--link-colorpreset-1_color)"
            height="1rem"
            size="m"
            slot="append-icon"
            width="1rem"
          />
        </ids-link>
        och ange nedan fel-id:
      </p>
      <p>
        Om du inte kan nå ditt intyg, kontakta din mottagning för att få en kopia av intyget.
      </p>
    </div>
  </ids-alert>,
]
`;
